# Things

./: .gitignore  LICENSE  README.md
src/C/Languages/WordsTokenizer/: .dir-locals.el  CMakeLists.txt  main.c  tests.c
src/C/Languages/WordsTokenizer/common/: cursor.c  cursor.h
src/C/Languages/WordsTokenizer/tests/: cursor_tests.c  cursor_tests.h
